Change migration Js code Recreate migrations Use only required fields in taskList partial

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -56,7 +56,7 @@
 
     $(document).ready(function () {
         $('#togglePassword').click(function () {
-            let passwordInput = $('#form2Example2');
+            let passwordInput = $('#Password');
             let type = passwordInput.attr('type') === 'password' ? 'text' : 'password';
             passwordInput.attr('type', type);
             $(this).toggleClass('fa-eye fa-eye-slash');
