--- a/Views/TaskManagment/Index.cshtml
+++ b/Views/TaskManagment/Index.cshtml
@@ -1,28 +1,39 @@
 ﻿@model List<DataAccess.Data.Models.TaskRecord>
 
 @{
-    // Check if the model has any elements
     var tasksJson = Newtonsoft.Json.JsonConvert.SerializeObject(Model);
+    var successMessage = TempData["SuccessMessage"] as string;
+    var errorMessage = TempData["ErrorMessage"] as string;
 
     if (Model.Count == 0)
     {
-        // If the model is empty, display a message
         <h1>Δεν υπάρχουν εγγραφές</h1>
     }
     else
     {
+        @if (!string.IsNullOrEmpty(successMessage))
+        {
+            <div id="successMessage" class="alert alert-success">
+                @successMessage
+            </div>
+        }
+        else if (!string.IsNullOrEmpty(successMessage))
+        {
+            <div id="errorMessage" class="alert alert-danger">
+                @errorMessage
+            </div>
+        }
         var completedTasks = Model.Where(t => t.Status == DataAccess.Data.Status.Completed).ToList();
         var pendingTasks = Model.Where(t => t.Status == DataAccess.Data.Status.Pending).ToList();
-        // If the model has elements, display the tasks in two separate sections
-        // First section
-        <div class="container-fluid">
+ 
+        <div class="container-fluid" id="TaskManagmentContainer">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <button class="btn btn-success btn-lg float-left" onclick="add()">Add Task</button>
             </div>
 
             @if (pendingTasks != null)
             {
-                @await Html.PartialAsync("_UncompletedTasksPartial",pendingTasks);
+                @await Html.PartialAsync("_PendingTasksPartial",pendingTasks);
             }
 
             @if(completedTasks!=null){
@@ -48,37 +59,23 @@
     </div>
 </div> 
 
-@section Scripts {
-
+@section Scripts { 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js">
+    </script>
 
     <script>
 
         $(document).ready(function () {
-            // Initialize collapse functionality
             $('.task-title').click(function () {
                 $(this).next('.collapse').collapse('toggle');
             });
-            var tasksJson = @Html.Raw(Json.Serialize(tasksJson));
-
-            localStorage.setItem('tasks', tasksJson);
-
-        });
-
-        function completeStatus(taskId) {
-            console.log('CompleteStatus');
-            $.ajax({
-                type: "PUT",
-                url: "@Url.Action("ChangeTaskStatus", "TaskManagment")",
-                data: { id: taskId },
-                success: function (data) {
-                    console.log('success'); 
-                },
-                error: function (error) {
-                    console.log('error', error);
-                }
-            });
-        }
-
+            setTimeout(function () {
+                $('#successMessage').fadeOut();
+            }, 3000);
+            setTimeout(function () {
+                $('#errorMessage').fadeOut();
+            }, 3000);
+        }); 
     </script>
 }
