--- a/Views/TaskManagment/_PendingTasksPartial.cshtml
+++ b/Views/TaskManagment/_PendingTasksPartial.cshtml
@@ -1,13 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model List<DataAccess.Data.Models.TaskRecord>
+﻿@model List<DataAccess.Data.Models.TaskRecord>
 
 <section id="pendingTasks" class="task-section">
     <h2 class="task-title" data-toggle="collapse" aria-expanded="true">Pending Tasks</h2>
     <div class="collapse show" id="collapsePendingTasks">
         <section id="tasks1">
-            <table class="table table-striped" style="text-align:center" width="100%" id="pendingTasksTable">
+            <table class="table table-responsive" style="text-align:center" width="100%" id="pendingTasksTable">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
@@ -35,12 +32,9 @@
                                 <a asp-controller="TaskManagment" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-xs">
                                     <i class="fa fa-edit"></i>
                                 </a>
-                                <button class="btn btn-xs deleteBtn" data-id="@item.Id" data-url="@Url.Action("DeleteTask", "TaskManagment")">
+                                <button class="btn btn-xs deleteBtn" id="deleteBtnPending_@(item.Id)" data-id="@item.Id" data-url="@Url.Action("DeleteTask", "TaskManagment")">
                                     <i class="fa fa-trash"></i>
                                 </button>
-                                <a asp-controller="TaskManagment" asp-action="ChangeTaskStatus" asp-route-id="@item.Id" class="btn btn-xs">
-                                    <i class="fa fa-check-square-o"></i>
-                                </a>
                             </td>
                         </tr>
                     }
@@ -50,10 +44,11 @@
         </section>
     </div>
 </section>
-<script src="~/js/tasks.js"></script> 
-<script>
+<script src="~/js/tasks.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js">
+</script>
 
-    $('#pendingTasksTable').DataTable({});
-
+<script> 
+    $('#pendingTasksTable').DataTable({}); 
 </script>
 
