--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -24,7 +24,10 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-
+            <div>
+                <input type="checkbox" id="showPassword" />
+                <label for="showPassword">Show Password</label>
+            </div>
             <div class="row">
                 <div class="col-8">
                     <a asp-action="Login" class="text-decoration-none float-start mt-2">Back to Login</a>
@@ -41,5 +44,15 @@
 @section Scripts{
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <script>
+            //Show password as text if the checkbox is checked
+            $('#showPassword').click(function () {
+                var password = document.getElementById('Password');
+
+                var type = (this.checked) ? 'text' : 'password';
+                password.setAttribute('type', type);
+            });
+
+        </script>
     }
 }
