--- a/Views/TaskManagment/Edit.cshtml
+++ b/Views/TaskManagment/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DataAccess.Data.Models.TaskRecord
 
 <div class="card shadow border-0 my-4">
-    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+    <div class="card-header bg-secondary bg-info ml-0 py-3 rounded">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py=2">Edit task</h2>
+                <h2 class="text-white py-2">Edit task</h2>
             </div>
         </div>
     </div>
